--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">  
 <script src="https://kit.fontawesome.com/921016af83.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<title>pat</title>
+<title>sauce</title>
 </head>
 <body>
 
