added raleway font

--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 <body>
 
     <style>
-        @import url('https://fonts.googleapis.com/css?family=Product+Sans');
+        @import url('https://fonts.googleapis.com/css?family=Raleway');
     </style>
 
 <div class="main"><a href="index.html">pat</a></div>
-<div class="links2" style="font-family:'Product Sans'">
+<div class="links2" style="font-family:'Raleway'">
     <div id="content-1">learning python & javascript</div>
     <div id="content-2">cool guy</div>
     <div id="content-3">trying discord.js</div>
     <div id="content-4">breaking linux machines</div>
 </div>
 
-<div class="links" style="font-family:'Product Sans'">
+<div class="links" style="font-family:'Raleway'">
     <ul>
 <a href="https://github.com/pattheman344"><i class="fab fa-github"></i>&nbsp;github&nbsp;</a>
 <a href="portfolio/index.html"><i class="fas fa-paint-brush"></i>&nbsp;portfolio&nbsp;</a>
@@ -29,8 +29,8 @@
     </ul>
 </div>
 
-<div class="links23" style="font-family:'Product Sans'">
-    <p><i class="fab fa-discord"></i>&nbsp;pat#0005</p>
+<div class="links23" style="font-family:'Raleway'">
+    <p><i class="fab fa-discord"></i>&nbsp;sauce#4451</p>
 </div>
 </body>
 <script>
