--- a/index.html
+++ b/index.html
@@ -15,21 +15,18 @@
 
 <div class="main"><a href="index.html">pat</a></div>
 <div class="links2" style="font-family:'Raleway'">
-    <div id="content-1">learning python & javascript</div>
-    <div id="content-2">cool guy</div>
-    <div id="content-3">trying discord.js</div>
-    <div id="content-4">breaking linux machines</div>
+    <div id="content-1">trying to learn python</div>
+    <div id="content-2">backdooring every server i can</div>
+    <div id="content-3">thinking outside the box</div>
 </div>
 
 <div class="links" style="font-family:'Raleway'">
     <ul>
-<a href="https://github.com/pattheman344"><i class="fab fa-github"></i>&nbsp;github&nbsp;</a>
-<a href="portfolio/index.html"><i class="fas fa-paint-brush"></i>&nbsp;portfolio&nbsp;</a>
-<a href="https://steamcommunity.com/id/pattheman344"><i class="fab fa-steam"></i>&nbsp;steam&nbsp;</a>
+<a href="https://github.com/pattheman344"><i class="fab fa-accessible-icon"></i>&nbsp;disabled people&nbsp;</a>
     </ul>
 </div>
-
-<div class="links23" style="font-family:'Raleway'">
+<br>
+<div class="links3" style="font-family:'Raleway'">
     <p><i class="fab fa-discord"></i>&nbsp;sauce#4451</p>
 </div>
 </body>
