--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         @import url('https://fonts.googleapis.com/css?family=Raleway');
     </style>
 
-<div class="main"><a href="index.html">pat</a></div>
+<div class="main"><a href="index.html">sauce</a></div>
 <div class="links2" style="font-family:'Raleway'">
     <div id="content-1">trying to learn python</div>
     <div id="content-2">backdooring every server i can</div>
@@ -25,7 +25,6 @@
 <a href="https://github.com/pattheman344"><i class="fab fa-accessible-icon"></i>&nbsp;disabled people&nbsp;</a>
     </ul>
 </div>
-<br>
 <div class="links3" style="font-family:'Raleway'">
     <p><i class="fab fa-discord"></i>&nbsp;sauce#4451</p>
 </div>
