added music nd new link

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">  
 <script src="https://kit.fontawesome.com/921016af83.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<audio id="music" src="saucepages.mp3" autoplay loop onplaying="" style="display: none;"></audio>
 <title>sauce</title>
 </head>
 <body>
@@ -27,6 +28,9 @@
 </div>
 <div class="links3" style="font-family:'Raleway'">
     <p><i class="fab fa-discord"></i>&nbsp;sauce#4451</p>
+</div>
+<div class="links4" style="font-family:'Raleway';">
+    <p><i class="fas fa-copy"></i>&nbsp;projects</p>
 </div>
 </body>
 <script>
