--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 <div class="links4" style="font-family:'Raleway';">
     <p><i class="fas fa-copy"></i>&nbsp;projects</p>
 </div>
+<audio controls autoplay>
+    <source src="saucepages.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+  </audio>
 </body>
 <script>
     var divs = $('div[id^="content-"]').hide(),
