--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
 <div class="links4" style="font-family:'Raleway';">
     <p><i class="fas fa-copy"></i>&nbsp;projects</p>
 </div>
-<audio controls autoplay>
-    <source src="saucepages.mp3" type="audio/mpeg">
-  Your browser does not support the audio element.
-  </audio>
+<audio src="/music/saucepages.mp3" autoplay>
+    <p>If you are reading this, it is because your browser does not support the audio element.</p>
+    </audio>
 </body>
 <script>
     var divs = $('div[id^="content-"]').hide(),
