--- a/index.html
+++ b/index.html
@@ -30,11 +30,8 @@
     <p><i class="fab fa-discord"></i>&nbsp;sauce#4451</p>
 </div>
 <div class="links4" style="font-family:'Raleway';">
-    <p><i class="fas fa-copy"></i>&nbsp;projects</p>
+<a href="projects/index.html"><p><i class="fas fa-copy"></i>&nbsp;projects</p></a> 
 </div>
-<audio src="/music/saucepages.mp3" autoplay>
-    <p>If you are reading this, it is because your browser does not support the audio element.</p>
-    </audio>
 </body>
 <script>
     var divs = $('div[id^="content-"]').hide(),
