--- a/projects/index.html
+++ b/projects/index.html
@@ -3,17 +3,15 @@
 <head>
 <link rel="stylesheet" href="css/index.css">
 <link rel="shortcut icon" href="https://pattheman344.github.io/img/favicon.ico" type="image/x-icon"> 
-<meta property="og:title" content="Pat's Website"/>
+<meta property="og:title" content="saucepages"/>
 <script src="https://kit.fontawesome.com/921016af83.js" crossorigin="anonymous"></script>
-<script src="js/background.js"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="js/jquery.vide.min.js"></script>
-<style>@import url('https://fonts.googleapis.com/css?family=Product Sans');</style>
+<style>@import url('https://fonts.googleapis.com/css?family=Raleway');</style>
 <title>my portfolio</title>
 <div class="gohome"><a href="/./index.html"><i class="fas fa-home fa-5x"></i>&nbsp;</a>
     <a href="index.html">&nbsp;&nbsp;<i class="fas fa-paint-brush fa-5x"></i>&nbsp;</a>
-    <h1 style="font-family:'Product Sans'; text-align:left; font-size:4em;"><i class="fas fa-book"></i>&nbsp;Past Projects</h1>
-    <p style="font-family:'Product Sans'; font-size:3em;">Arceus Bot&nbsp;<i class="fab fa-github"></i></p>
-    <p style="font-family:'Product Sans'">This is the first bot I made in discord.py, a python library to interact with the discord API. It has basic moderation commands. V2 is out, look below.</p>
-    <p style="font-family:'Product Sans'; font-size:1.5em;"><a href="https://github.com/pattheman344/arceus-bot-1"><i class="fab fa-github"></i>&nbsp;Repository Link</a></p>
+    <h1 style="font-family:'Raleway'; text-align:left; font-size:4em;"><i class="fas fa-book"></i>&nbsp;Past Projects</h1>
+    <p style="font-family:'Raleway'; font-size:3em;">leaked bot&nbsp;<i class="fab fa-github"></i></p>
+    <p style="font-family:'Raleway'">i leaked some kids bot. lol</p>
+    <p style="font-family:'Raleway'; font-size:1.5em;"><a href="https://github.com/sxuce/leakedseagullbot-xenvo"><i class="fab fa-github"></i>&nbsp;link</a></p>
 </div>
