--- a/projects/index.html
+++ b/projects/index.html
@@ -10,8 +10,8 @@
 <title>my portfolio</title>
 <div class="gohome"><a href="/./index.html"><i class="fas fa-home fa-5x"></i>&nbsp;</a>
     <a href="index.html">&nbsp;&nbsp;<i class="fas fa-paint-brush fa-5x"></i>&nbsp;</a>
-    <h1 style="font-family:'Raleway'; text-align:left; font-size:4em;"><i class="fas fa-book"></i>&nbsp;Past Projects</h1>
-    <p style="font-family:'Raleway'; font-size:3em;">leaked bot&nbsp;<i class="fab fa-github"></i></p>
-    <p style="font-family:'Raleway'">i leaked some kids bot. lol</p>
-    <p style="font-family:'Raleway'; font-size:1.5em;"><a href="https://github.com/sxuce/leakedseagullbot-xenvo"><i class="fab fa-github"></i>&nbsp;link</a></p>
+    <h1 style="font-family:'Raleway'; text-align:left; font-size:4em;"><i class="fas fa-book"></i>&nbsp;past projects</h1>
+    <p style="font-family:'Raleway'; text-align: left; font-size:3em;">leaked bot&nbsp;<i class="fab fa-github"></i></p>
+    <p style="font-family:'Raleway';text-align: left;">i leaked some kids bot. lol</p>
+    <p style="font-family:'Raleway'; text-align: left; font-size:1.5em;"><a href="https://github.com/sxuce/leakedseagullbot-xenvo"><i class="fab fa-github"></i>&nbsp;link</a></p>
 </div>
