project link change

--- a/projects/index.html
+++ b/projects/index.html
@@ -8,7 +8,7 @@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <style>@import url('https://fonts.googleapis.com/css?family=Raleway');</style>
 <title>my portfolio</title>
-<div class="gohome"><a href="/./index.html"><i class="fas fa-home fa-5x"></i>&nbsp;</a>
+<div class="gohome"><a href="/saucepages/index.html"><i class="fas fa-home fa-5x"></i>&nbsp;</a>
     <a href="index.html">&nbsp;&nbsp;<i class="fas fa-paint-brush fa-5x"></i>&nbsp;</a>
     <h1 style="font-family:'Raleway'; text-align:left; font-size:4em;"><i class="fas fa-book"></i>&nbsp;past projects</h1>
     <p style="font-family:'Raleway'; text-align: left; font-size:3em;">leaked bot&nbsp;<i class="fab fa-github"></i></p>
