--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <script src="https://kit.fontawesome.com/921016af83.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <audio id="music" src="music/saucepages.mp3" autoplay loop onplaying="" style="display: none;"></audio>
+<meta http-equiv="refresh" content="0; URL='https://sxuce.github.io/saucepages/index.html'" />
 <title>sauce</title>
 </head>
 <body>
