--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     </style>
 
 <div class="main"><a href="index.html">sauce</a></div>
-<div class="links2" style="font-family:'Raleway'">
-    <div id="content-1">trying to learn python</div>
-    <div id="content-2">backdooring every server i can</div>
-    <div id="content-3">thinking outside the box</div>
-</div>
+<h1>
+    <a href="" class="typewrite" data-period="2000" data-type='[ "backdoor v2", "python learner", "above average", "vr is the future" ]'>
+      <span class="wrap"></span>
+    </a>
+  </h1>
 
 
 
@@ -34,56 +34,6 @@
 <div class="links4" style="font-family:'Raleway';">
 <a href="projects/index.html"><p><i class="fas fa-copy"></i>&nbsp;projects</p></a> 
 </div>
-<script>
-                doc.innerHTML +=
-                    `<div class="textiboi">
-                <a id="typElement"></a></div>
-                <div class="textiboi">
-				<a class="textiboi animated fadeIn"  href="https://panel.methamphetamine.solutions/">panel</a>
-				<a class="textiboi animated fadeIn"  href="/showcase/">showcase [gmod]</a>
-                <a class="textiboi animated fadeIn"  href="/tos/">tos</a>`;
-                console.log("running typewrite");
-                indefiniteWrite();
-
-            }, 550);
-
-        }
-
-        function indefiniteWrite() {
-            let strs = [
-                "hello from wolfie, dogecore & woob",
-                "owning since 2018",
-                "ur server downed",
-                "wheres ur cw2 nospread",
-                "wheres ur fas2 nospread",
-                "enraged?",
-                "premium software",
-                "home of the catjpg",
-                "please let me out it's cold in here",
-                "best garry's mod cheat",
-                "best counter-strike: source cheat",
-                "best apex legends cheat",
-                "stop using inferior cheats",
-                "get good",
-                "VVVVVVVVVVVVVVVVVVVVVVVVVVV"
-            ];
-
-            var num = getRandomInt(strs.length);
-
-            console.log("writing " + strs[num]);
-
-            var typElement = document.getElementById('typElement');
-
-            var typewriter = new Typewriter(typElement, {
-                loop: true
-            });
-
-            typewriter.typeString(strs[num]).pauseFor(5000).deleteAll().pauseFor(100).callFunction(() => {
-                typewriter.stop();
-                indefiniteWrite();
-            }).start();
-        }
-</script>
 </body>
 <script>
     var divs = $('div[id^="content-"]').hide(),
