--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <link rel="stylesheet" href="css/index.css">
-<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">  
+<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+<script src="index.js"></script>
 <script src="https://kit.fontawesome.com/921016af83.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <audio id="music" src="music/saucepages.mp3" autoplay loop onplaying="" style="display: none;"></audio>
