Revert "revert large"
This reverts commit 53fca745107c9a55657a62bf0de07cd6c95e7053.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <link rel="stylesheet" href="css/index.css">
-<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">  
+<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+<script src="index.js"></script>
 <script src="https://kit.fontawesome.com/921016af83.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <audio id="music" src="music/saucepages.mp3" autoplay loop onplaying="" style="display: none;"></audio>
@@ -15,11 +16,11 @@
     </style>
 
 <div class="main"><a href="index.html">sauce</a></div>
-<div class="links2" style="font-family:'Raleway'">
-    <div id="content-1">trying to learn python</div>
-    <div id="content-2">backdooring every server i can</div>
-    <div id="content-3">thinking outside the box</div>
-</div>
+<h1>
+    <a href="" class="typewrite" data-period="2000" data-type='[ "backdoor v2", "python learner", "above average", "vr is the future" ]'>
+      <span class="wrap"></span>
+    </a>
+  </h1>
 
 
 
