--- a/index.html
+++ b/index.html
@@ -1,52 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="css/index.css">
-<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-<script src="index.js"></script>
-<script src="https://kit.fontawesome.com/921016af83.js" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<title>sauce</title>
+    <title>Sauce's Website</title>
 </head>
-<body>
 
-    <style>
-        @import url('https://fonts.googleapis.com/css?family=Raleway');
-    </style>
+<p>sauce</p>
 
-<div class="main"><a href="index.html">sauce</a></div>
-<h1>
-    <a href="" class="typewrite" data-period="2000" data-type='[ "backdoor v2", "python learner", "above average", "vr is the future" ]'>
-      <span class="wrap"></span>
-    </a>
-  </h1>
-
-
-
-<div class="links" style="font-family:'Raleway'">
-    <ul>
-<a href="https://github.com/pattheman344"><i class="fab fa-accessible-icon"></i>&nbsp;disabled people&nbsp;</a>
-    </ul>
-</div>
-<div class="links3" style="font-family:'Raleway'">
-    <p><i class="fab fa-discord"></i>&nbsp;sauce#4451</p>
-</div>
-<div class="links4" style="font-family:'Raleway';">
-<a href="projects/index.html"><p><i class="fas fa-copy"></i>&nbsp;projects</p></a> 
-</div>
-</body>
-<script>
-    var divs = $('div[id^="content-"]').hide(),
-i = 0;
-
-(function cycle() {
-
-divs.eq(i).fadeIn(400)
-    .delay(3000)
-    .fadeOut(400, cycle);
-
-i = ++i % divs.length;
-
-})();
-</script>
 </html>
