--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ body, html {
 /* First image (Logo. Full height) */
 .bgimg-1 {
   background-image: url('/w3images/parallax1.jpg');
+  background-color: rgb(0, 0, 0);
   min-height: 100%;
 }
 
