--- a/trollage/troll.html
+++ b/trollage/troll.html
@@ -9,7 +9,7 @@
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url('/troll1.jpg');
+  background-color: url('https://www.pngmagic.com/product_images/Smoky-Black-solid-color-background.jpg');
   min-height: 100%;
   background-position: center;
   background-size: cover;
