--- a/index.html
+++ b/index.html
@@ -1,258 +1,170 @@
-<!DOCTYPE html>
-<html>
-<title>sauces stalking page</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
-body, html {
-  height: 100%;
-  color: #777;
-  line-height: 1.8;
-}
 
-/* Create a Parallax Effect */
-.bgimg-1, .bgimg-2, .bgimg-3 {
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 
-/* First image (Logo. Full height) */
-.bgimg-1 {
-  background-image: url('/w3images/parallax1.jpg');
-  background-color: rgb(0, 0, 0);
-  min-height: 100%;
-}
+<head>
 
-/* Second image (Portfolio) */
-.bgimg-2 {
-  background-image: url("/w3images/parallax2.jpg");
-  min-height: 400px;
-}
+    
+        <title>methamphetamine.solutions</title>
+        <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+        <audio id="music" src="msc.mp3" autoplay loop onplaying="" style="display: none;"></audio>
+        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.13.0/css/all.css">
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="animate.css">
+</head>
 
-/* Third image (Contact) */
-.bgimg-3 {
-  background-image: url("/w3images/parallax3.jpg");
-  min-height: 400px;
-}
-
-.w3-wide {letter-spacing: 10px;}
-.w3-hover-opacity {cursor: pointer;}
-
-/* Turn off parallax scrolling for tablets and phones */
-@media only screen and (max-device-width: 1600px) {
-  .bgimg-1, .bgimg-2, .bgimg-3 {
-    background-attachment: scroll;
-    min-height: 400px;
-  }
-}
-</style>
 <body>
-
-<!-- Navbar (sit on top) -->
-<div class="w3-top">
-  <div class="w3-bar" id="myNavbar">
-    <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
-      <i class="fa fa-bars"></i>
-    </a>
-    <a href="#home" class="w3-bar-item w3-button">HOME</a>
-    <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT</a>
-    <a href="#portfolio" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> PORTFOLIO</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> CONTACT</a>
-    <a href="trollage/troll.html" classs="w3-bar-item w3-button ">TROLLAGE</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
-      <i class="fa fa-search"></i>
-    </a>
-  </div>
-
-  <!-- Navbar on small screens -->
-  <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
-    <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
-    <a href="#portfolio" class="w3-bar-item w3-button" onclick="toggleFunction()">PORTFOLIO</a>
-    <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT</a>
-    <a href="#" class="w3-bar-item w3-button">SEARCH</a>
-  </div>
-</div>
-
-<!-- First Parallax Image with Logo Text -->
-<div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
-  <div class="w3-display-middle" style="white-space:nowrap;">
-    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">SAUCE'S <span class="w3-hide-small">WEBSITE</span>
-  </div>
-</div>
-
-<!-- Container (About Section) -->
-<div class="w3-content w3-container w3-padding-64" id="about">
-  <h3 class="w3-center">LIFE AS SAUCE</h3>
-  <div class="w3-row">
-
-  </div>
-  <p class="w3-large w3-center w3-padding-16">Learning:</p>
-  <p class="w3-wide"><i class="fa fa-camera"></i>Python</p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:60%">60%</div>
-  </div>
-  <p class="w3-wide"><i class="fa fa-laptop"></i>HTML</p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:40%">40%</div>
-  </div>
-  <p class="w3-wide"><i class="fa fa-photo"></i>Trading</p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:45%">45%</div>
-  </div>
-</div>
-
-<div class="w3-row w3-center w3-dark-grey w3-padding-16">
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">5+</span><br>
-    Backdoors
-  </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">20+</span><br>
-    Trolls
-  </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">40+</span><br>
-    Kids crying
-  </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">999+</span><br>
-    Hours with your mother
-  </div>
-</div>
-
-<!-- Second Parallax Image with Portfolio Text -->
-<div class="bgimg-2 w3-display-container w3-opacity-min">
-  <div class="w3-display-middle">
-    <span class="w3-xxlarge w3-text-white w3-wide">PORTFOLIO</span>
-  </div>
-</div>
-
-<!-- Container (Portfolio Section) -->
-<div class="w3-content w3-container w3-padding-64" id="portfolio">
-  <h3 class="w3-center">MY WORK</h3>
-  <p class="w3-center"><em>Here are some of my latest lorem work ipsum tipsum.<br> Click on the images to make them bigger</em></p><br>
-
-  <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
-  <div class="w3-row-padding w3-center">
-    <div class="w3-col m3">
-      <img src="/troll1.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Trollage v1">
+    <div id="main" class="center">
+        <div id="overlay" onclick="music.play(); addStuff();"><span class="header center" id="status_text"></span></div>
     </div>
+    <script>
+        function handleAnimations() {
+            let animations = [
+                ["bounce", "bounce"],
+                ["flash", "flash"],
+                ["pulse", "pulse"],
+                ["shake", "shake"],
+                ["headShake", "headShake"],
+                ["swing", "swing"],
+                ["tada", "tada"],
+                ["wobble", "wobble"],
+                ["jello", "jello"],
+                ["heartBeat", "heartBeat"],
+                ["bounceIn", "bounceIn"],
+                ["bounceInDown", "bounceInUp"],
+                ["bounceInLeft", "bounceInRight"],
+                ["fadeIn", "fadeIn"],
+                ["fadeInDown", "fadeInUp"],
+                ["fadeInLeft", "fadeInRight"],
+                ["flip", "flip"],
+                ["flipInX", "flipInX"],
+                ["flipInY", "flipInY"],
+                ["rotateIn", "rotateIn"],
+                ["rotateInDownLeft", "rotateInDownRight"],
+                ["slideInDown", "slideInUp"],
+                ["slideInLeft", "slideInRight"],
+                ["zoomIn", "zoomIn"],
+                ["zoomInDown", "zoomInUp"],
+                ["zoomInLeft", "zoomInRight"],
+                ["jackInTheBox", "jackInTheBox"],
+            ];
 
-    <div class="w3-col m3">
-      <img src="/troll2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Trollage v2">
-    </div>
+            var num = getRandomInt(animations.length);
 
-    <div class="w3-col m3">
-      <img src="/troll3.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Trollage v3">
-    </div>
+            animateCSS('[name="top"]', animations[num][0], animationOver);
+            animateCSS('[name="bottom"]', animations[num][1], animationOver);
+            console.log("top: " + animations[num][0]);
+            console.log("bottom: " + animations[num][1]);
+        }
 
-    <div class="w3-col m3">
-      <img src="/troll4.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Trollage v4">
-    </div>
-  </div>
+        function addStuff() {
+            at("main").innerHTML =
+                `<h1 name="top"    id = "status_text" class="header animated"><a href="https://methamphetamine.solutions">methamphetamine.solutions</a></h1>
+            <p  name="bottom" id = "text2" class="textiboi animated">premium cheats for various games</p>`;
 
-    </div>
-  </div>
-</div>
+            handleAnimations();
+        }
 
-<!-- Modal for full size images on click-->
-<div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
-  <span class="w3-button w3-large w3-black w3-display-topright" title="Close Modal Image"><i class="fa fa-remove"></i></span>
-  <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
-    <img id="img01" class="w3-image">
-    <p id="caption" class="w3-opacity w3-large"></p>
-  </div>
-</div>
+        function animateCSS(element, animationName, callback) {
+            const node = document.querySelector(element)
+            node.classList.add('animated', animationName)
+            node.classList.add('delay-2s')
 
-<!-- Third Parallax Image with Portfolio Text -->
-<div class="bgimg-3 w3-display-container w3-opacity-min">
-  <div class="w3-display-middle">
-     <span class="w3-xxlarge w3-text-white w3-wide">CONTACT</span>
-  </div>
-</div>
+            function handleAnimationEnd() {
+                node.classList.remove('animated', animationName)
+                node.removeEventListener('animationend', handleAnimationEnd)
 
-<!-- Container (Contact Section) -->
-<div class="w3-content w3-container w3-padding-64" id="contact">
-  <h3 class="w3-center">CONTACT ME</h3>
+                if (typeof callback === 'function') callback()
+            }
 
-  <div class="w3-row w3-padding-32 w3-section">
-    <div class="w3-col m4 w3-container">
-      <img src="/w3images/map.jpg" class="w3-image w3-round" style="width:100%">
-    </div>
-    <div class="w3-col m8 w3-panel">
-      <div class="w3-large w3-margin-bottom">
-        <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Leiecester<br>
-        <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> 01757 706835<br>
-        <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> pizzathyme.co.uk<br>
-      </div>
-<!-- random template shit i dont wanna use but wanna keep    
-    <form action="/action_page.php" target="_blank">
-        <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
-          <div class="w3-half">
-            <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
-          </div>
-          <div class="w3-half">
-            <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
-          </div>
-        </div>
-        <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
-        <button class="w3-button w3-black w3-right w3-section" type="submit">
-          <i class="fa fa-paper-plane"></i> SEND MESSAGE
-        </button>
-      </form>
-    </div>
-  </div>
-</div> -->
+            node.addEventListener('animationend', handleAnimationEnd)
+        }
 
-<!-- Footer -->
-<footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
-  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-  <div class="w3-xlarge w3-section">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
-  </div>
-</footer>
- 
-<script>
-// Modal Image Gallery
-function onClick(element) {
-  document.getElementById("img01").src = element.src;
-  document.getElementById("modal01").style.display = "block";
-  var captionText = document.getElementById("caption");
-  captionText.innerHTML = element.alt;
-}
+        function getRandomInt(max) {
+            return Math.floor(Math.random() * Math.floor(max));
+        }
+        var at = document.getElementById.bind(document);
+        window.addEventListener("DOMContentLoaded", () => {
+            at("status_text").innerHTML = "loading";
 
-// Change style of navbar on scroll
-window.onscroll = function() {myFunction()};
-function myFunction() {
-    var navbar = document.getElementById("myNavbar");
-    if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
-        navbar.className = "w3-bar" + " w3-card" + " w3-animate-top" + " w3-white";
-    } else {
-        navbar.className = navbar.className.replace(" w3-card w3-animate-top w3-white", "");
-    }
-}
+        });
 
-// Used to toggle the menu on small screens when clicking on the menu button
-function toggleFunction() {
-    var x = document.getElementById("navDemo");
-    if (x.className.indexOf("w3-show") == -1) {
-        x.className += " w3-show";
-    } else {
-        x.className = x.className.replace(" w3-show", "");
-    }
-}
-</script>
+        window.addEventListener("load", () => {
+            setTimeout(() => {
+                if (!window.music.paused) {
+                    addStuff();
+                    console.log("music already started");
+                    return;
+                }
+                at("status_text").innerHTML = "click to enter";
+                at("status_text").classList.add("begin");
 
+            }, 100);
+        });
+
+        var temp = 0
+
+        function animationOver() {
+            temp++;
+
+            if (temp != 2)
+                return;
+
+            setTimeout(function() {
+                console.log("animations over");
+                var doc = document.getElementById("main");
+                var inner = doc.innerHTML;
+                // WOW this is aids.
+
+                doc.innerHTML +=
+                    `<div class="textiboi">
+                <a id="typElement"></a></div>
+                <div class="textiboi">
+				<a class="textiboi animated fadeIn"  href="https://panel.methamphetamine.solutions/">panel</a>
+				<a class="textiboi animated fadeIn"  href="/showcase/">showcase [gmod]</a>
+                <a class="textiboi animated fadeIn"  href="/tos/">tos</a>`;
+                console.log("running typewrite");
+                indefiniteWrite();
+
+            }, 550);
+
+        }
+
+        function indefiniteWrite() {
+            let strs = [
+                "hello from wolfie, dogecore & woob",
+                "owning since 2018",
+                "ur server downed",
+                "wheres ur cw2 nospread",
+                "wheres ur fas2 nospread",
+                "enraged?",
+                "premium software",
+                "home of the catjpg",
+                "please let me out it's cold in here",
+                "best garry's mod cheat",
+                "best counter-strike: source cheat",
+                "best apex legends cheat",
+                "stop using inferior cheats",
+                "get good",
+                "VVVVVVVVVVVVVVVVVVVVVVVVVVV"
+            ];
+
+            var num = getRandomInt(strs.length);
+
+            console.log("writing " + strs[num]);
+
+            var typElement = document.getElementById('typElement');
+
+            var typewriter = new Typewriter(typElement, {
+                loop: true
+            });
+
+            typewriter.typeString(strs[num]).pauseFor(5000).deleteAll().pauseFor(100).callFunction(() => {
+                typewriter.stop();
+                indefiniteWrite();
+            }).start();
+        }
+    </script>
 </body>
+
 </html>
