--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
         function addStuff() {
             at("main").innerHTML =
-                `<h1 name="top"    id = "status_text" class="header animated"><a href="https://methamphetamine.solutions">methamphetamine.solutions</a></h1>
-            <p  name="bottom" id = "text2" class="textiboi animated">premium cheats for various games</p>`;
+                `<h1 name="top"    id = "status_text" class="header animated"><a href="https://methamphetamine.solutions">Trolage gaming sumraat awesome</a></h1>
+            <p  name="bottom" id = "text2" class="textiboi animated">aryan saini</p>`;
 
             handleAnimations();
         }
@@ -96,7 +96,7 @@
                     console.log("music already started");
                     return;
                 }
-                at("status_text").innerHTML = "click to enter";
+                at("status_text").innerHTML = "click to enter...";
                 at("status_text").classList.add("begin");
 
             }, 100);
