--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <div id="main" class="center">
-        <div id="overlay" onclick="music.play(); addStuff();"><span class="header center" id="status_text"></span></div>
+        <div id="overlay" onclick="music.play(); addStuff(); music.currentTime = 5;"><span class="header center" id="status_text"></span></div>
     </div>
     <script>
         function handleAnimations() {
@@ -119,7 +119,7 @@
                     `<div class="textiboi">
                 <a id="typElement"></a></div>
                 <div class="textiboi">
-				<a class="textiboi animated fadeIn"  href="https://youtu.be/34vsK9Ythkc">video 1</a>
+				<a class="textiboi animated fadeIn"  href="https://www.youtube.com/watch?v=GiOfnmrl4IM">video 1</a>
                 <br>
 				<a class="textiboi animated fadeIn"  href="https://www.youtube.com/watch?v=1rD22xv8Oko">video 2</a>
                 <br>
